# sndcat

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: build.yml
contrib/azure-asr/: asr.py  requirements.txt
contrib/win-track-now-playing/: .gitignore  requirements.txt  wav-split.py  windows-track-title.py
csrc/: portaudio-wsapi.c
rust-portaudio/rust-portaudio-sys/: Cargo.toml  build.rs
rust-portaudio/src/: lib.rs  stream.rs
rust-portaudio/src/ext/: mod.rs  wasapi.rs
src/: ast.rs  cli.rs  config.rs  dev.rs  input.rs  main.rs  mixer.rs  oggopus.rs  output.rs  parser.rs  resample.rs
src/input/: dev.rs  gen.rs  level.rs  mix.rs  mono.rs  mp3.rs  opus.rs  resample.rs
src/output/: background.rs  dev.rs  opus.rs  stdout.rs  tcp.rs  terminal.rs  wav.rs
src/parser/: grammar.lalrpop  grammar.rs
vcpkg/: build-portaudio.bat
vcpkg-ports/: build-portaudio.bat  build-portaudio.py
vcpkg-ports/portaudio/: fix-include.patch  fix-library-can-not-be-found.patch  portfile.cmake
vcpkg/ports/portaudio/: portfile.cmake
