[package]
name = "sndcat"
version = "0.1.0"
authors = ["Jun Wu <quark@lihdd.net>"]
edition = "2018"

[dependencies]
anyhow = "1"
audiopus = "0.2"
ctrlc = "3"
env_logger = { version = "0.8", default-features = false, features = ["termcolor", "humantime", "atty"] }
log = "0.4"
minimp3 = "0.5"
ogg = "0.8"
once_cell = "1"
parking_lot = "0.11"
portaudio = "0.7"
speexdsp-resampler = "0.1"
thread-priority = "0.2"

[build-dependencies]
vcpkg = "0.2"